# rbatis

./: .gitignore  Cargo.toml  README.md  Readme.md  rustfmt.toml
.github/: pull.yml
.github/workflows/: ci.yml
benches/: raw_performance.rs
crates/libs/rbatis/: Cargo.toml
crates/libs/rbatis-codegen/: Cargo.toml  Readme.md
crates/libs/rbatis-codegen/src/: error.rs  from_bool.rs  into_sql.rs  lib.rs  ops.rs  ops_add.rs  ops_bit_and.rs  ops_bit_or.rs  ops_cmp.rs  ops_div.rs  ops_eq.rs  ops_mul.rs  ops_neg.rs  ops_not.rs  ops_rem.rs  ops_sub.rs  ops_xor.rs
crates/libs/rbatis-macro-driver/: Cargo.toml
crates/libs/rbatis-macro-driver/src/: lib.rs  util.rs
crates/libs/rbatis/src/: crud.rs  crud_ext.rs  crud_ref.rs  decode.rs  executor.rs  lib.rs  rbatis.rs
crates/libs/rbatis/src/plugin/: intercept.rs  intercept_log.rs  intercept_page.rs  object_id.rs  page.rs  snowflake.rs
crates/libs/rbatis/src/plugin/table_sync/: mod.rs  mssql_mapper.rs  mysql_mapper.rs  pg_mapper.rs  sqlite_mapper.rs
crates/libs/rbatis/src/utils/: mod.rs  model_ref.rs  table_util.rs
crates/libs/rbdc/: Cargo.toml
crates/libs/rbdc-mssql/: Cargo.toml
crates/libs/rbdc-mssql/src/: decode.rs  driver.rs  encode.rs  lib.rs
crates/libs/rbdc-mysql/: Cargo.toml
crates/libs/rbdc-mysql/src/: describe.rs  driver.rs  error.rs  row.rs  (+5 more)
crates/libs/rbdc-pg/: Cargo.toml
crates/libs/rbdc-pool-deadpool/: Cargo.toml
crates/libs/rbdc-pool-deadpool/src/: lib.rs
crates/libs/rbdc-pool-fast/: Cargo.toml
crates/libs/rbdc-sqlite/: Cargo.toml
crates/libs/rbdc/src/: db.rs  error.rs  lib.rs  rt.rs
crates/libs/rbdc/src/common/: mod.rs  statement_cache.rs
crates/libs/rbdc/src/ext/: async_stream.rs  ustr.rs
crates/libs/rbdc/src/io/: buf.rs  buf_stream.rs  write_and_flush.rs
crates/libs/rbdc/src/net/: mod.rs  socket.rs
crates/libs/rbdc/src/net/tls/: mod.rs  rustls.rs
crates/libs/rbdc/src/pool/: conn_box.rs  conn_manager.rs  mod.rs
crates/libs/rbdc/src/types/: bytes.rs  date.rs  datetime.rs  decimal.rs  json.rs  time.rs  timestamp.rs  uuid.rs
crates/libs/rbdc/src/util/: mod.rs
crates/libs/rbs/: Cargo.toml
crates/tools/example/: Cargo.toml  example.html
crates/tools/example1/: Cargo.toml
crates/tools/rdbc-example/: Cargo.toml
crates/tools/rdbc-example/src/: mssql.rs  mysql.rs  sqlite.rs
example/src/: plugin_intercept_log_next.rs  plugin_intercept_log_scope.rs  plugin_intercept_read_write_separation.rs
rbatis-codegen/: Cargo.toml
rbatis-codegen/src/: error.rs  from_bool.rs  ops.rs  ops_add.rs  ops_bit_and.rs  ops_bit_or.rs  ops_cmp.rs  ops_div.rs  ops_eq.rs  ops_mul.rs  ops_neg.rs  ops_not.rs  ops_rem.rs  ops_sub.rs  ops_xor.rs
rbatis-codegen/src/codegen/: func.rs  loader_html.rs  mod.rs  parser_html.rs  parser_pysql.rs
rbatis-macro-driver/: Cargo.toml
rbatis-macro-driver/src/: lib.rs  util.rs
rbatis-macro-driver/src/macros/: html_sql_impl.rs  py_sql_impl.rs  snake_name.rs  sql_impl.rs
rbdc/: Cargo.toml
rbdc-mssql/: Cargo.toml
rbdc-mssql/src/: decode.rs  driver.rs  encode.rs  lib.rs
rbdc-mysql/: Cargo.toml
rbdc-mysql/src/: collation.rs  describe.rs  driver.rs  error.rs  lib.rs  meta_data.rs  query.rs  result_set.rs  row.rs  stmt.rs  value.rs
rbdc-mysql/src/connection/: auth.rs  establish.rs  executor.rs  mod.rs  stream.rs  tls.rs
rbdc-mysql/src/io/: buf.rs
rbdc-mysql/src/options/: connect.rs  parse.rs  ssl_mode.rs
rbdc-mysql/src/protocol/: packet.rs  row.rs
rbdc-mysql/src/types/: date.rs  datetime.rs  decimal.rs  decode.rs  enums.rs  geometry.rs  json.rs  mod.rs  set.rs  time.rs  timestamp.rs  uuid.rs  value.rs  year.rs
rbdc-pg/: Cargo.toml
rbdc-pg/src/: arguments.rs  column.rs  driver.rs  error.rs  lib.rs  meta_data.rs  query.rs  row.rs  statement.rs  type_info.rs  value.rs
rbdc-pg/src/connection/: describe.rs  establish.rs  executor.rs  mod.rs  sasl.rs  stream.rs  tls.rs
rbdc-pg/src/message/: authentication.rs  backend_key_data.rs  bind.rs  close.rs  command_complete.rs  copy.rs  data_row.rs  describe.rs  execute.rs  mod.rs  notification.rs  parameter_description.rs  parameter_status.rs  parse.rs  password.rs  ready_for_query.rs  response.rs  row_description.rs  sasl.rs  startup.rs
rbdc-pg/src/options/: connect.rs  mod.rs  parse.rs  pgpass.rs  ssl_mode.rs
rbdc-pg/src/types/: array.rs  bigdecimal.rs  bool.rs  byte.rs  date.rs  datetime.rs  decimal.rs  encode.rs  float.rs  int.rs  json.rs  money.rs  numeric.rs  oid.rs  string.rs  time.rs  timestamp.rs  timestamptz.rs  timetz.rs  uuid.rs  value.rs
rbdc-pool-fast/src/: lib.rs
rbdc-sqlite/: Cargo.toml
rbdc-sqlite/src/: arguments.rs  decode.rs  driver.rs  encode.rs  error.rs  lib.rs  query.rs  row.rs  type_info.rs  value.rs
rbdc-sqlite/src/connection/: collation.rs  establish.rs  execute.rs  executor.rs  handle.rs  mod.rs  worker.rs
rbdc-sqlite/src/options/: auto_vacuum.rs  connect.rs  journal_mode.rs  mod.rs  parse.rs  synchronous.rs
rbdc-sqlite/src/statement/: handle.rs  mod.rs  virtual.rs
rbdc-sqlite/src/types/: bool.rs  bytes.rs  float.rs  int.rs  str.rs  uint.rs  value.rs
rbdc/src/: db.rs  error.rs  rt.rs
rbdc/src/common/: mod.rs  statement_cache.rs
rbdc/src/ext/: async_stream.rs  ustr.rs
rbdc/src/io/: buf.rs  buf_stream.rs  write_and_flush.rs
rbdc/src/net/: socket.rs
rbdc/src/pool/: conn_box.rs  conn_manager.rs  mod.rs
rbdc/src/types/: bytes.rs  date.rs  datetime.rs  decimal.rs  json.rs  mod.rs  time.rs  timestamp.rs  uuid.rs
rbs/: Cargo.toml
rbs/src/: index.rs  lib.rs
rbs/src/value/: map.rs  mod.rs
rbs/src/value_serde/: de.rs  se.rs
src/: crud.rs  crud_ref.rs  decode.rs  executor.rs  lib.rs  rbatis.rs
src/plugin/: intercept.rs  intercept_log.rs  object_id.rs  page.rs  snowflake.rs
src/plugin/table_sync/: mod.rs  mssql_mapper.rs  mysql_mapper.rs  pg_mapper.rs  sqlite_mapper.rs
src/sql/: page.rs
src/utils/: mod.rs  model_ref.rs
tests/: crud_test.rs  decode_test.rs  html_sql_test.rs  intercept_test.rs  mod.rs  option_test.rs  parser_pysql.rs  py_sql_test.rs  rbatis_sql_test.rs  rbatis_table_util_test.rs  rbdc_test.rs  rbs_test.rs  snowflake_test.rs
(+249 files in other folders)
