[package]
name = "rbdc-pool-deadpool"
version = "4.5.7"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://rbatis.github.io/rbatis.io"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rt_tokio"]
rt_tokio = ["deadpool/rt_tokio_1"]
rt_async_std = ["deadpool/rt_async-std_1"]


[dependencies]
async-trait = "0.1"
# futures-core = { version = "0.3" }
rbs = { workspace = true }
rbdc = { workspace = true,default-features = false }
deadpool = { version = "0.12.1" ,features = ["default"]}