[package]
name = "rbdc"
version = "4.5.41"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://rbatis.github.io/rbatis.io"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io"

[features]
default = ["tls-rustls"]
tls-rustls = ["rustls", "webpki-roots", "rustls-pemfile", "tokio-rustls"]
tls-native-tls = ["native-tls", "tokio-native-tls"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "fs", "net", "rt", "rt-multi-thread", "time", "io-util", "macros"] }
tokio-rustls = { version = "0.26.0", default-features = false, optional = true, features = ["ring"] }
rustls = { version = "0.23", default-features = false, optional = true, features = ["ring"] }
webpki-roots = { version = "0.26.6", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
log = "0.4"
serde = "1"
serde_json = "1"
bytes = "1"
memchr = "2.7"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", features = ["alloc", "sink"] }
futures-channel = { version = "0.3", default-features = false, features = ["sink", "alloc", "std"] }
tokio-native-tls = { version = "0.3.1", optional = true }
native-tls = { version = "0.2.12", optional = true }
rbs = { workspace = true }
fastdate = { version = "0.3" }
serde_bytes = "0.11"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
itoa = "1.0"
bigdecimal = { version = "0.4", features = ["serde"] }
lru = "0.12"
